finished the initial 6 equation problem

--- a/Documents/camera/camera.tex
+++ b/Documents/camera/camera.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath}
 \usepackage{subfig}
 \usepackage[section]{placeins}
+\usepackage{epstopdf, color}
 
 
 \newcommand{\mtx}[1]{\ensuremath{\mathbf{#1}}}
@@ -13,12 +14,13 @@
 
 \begin{document}
 \maketitle
+
 \section{Introduction}
-This report describes a novel method for transforming a coordinate in three-dimensional space $(x,y,z)$, into pixels $ (u,v)$ in a digital image taken by a camera. Equations that express the pixels in terms of the cameras intrinsic and extrensic parameters are derived from first principles, from these, the vanishing point special case is found. It is shown that the parameters can be solved with knowledge of 2 sets of coordinates and corresponding pixels, and the vanishing point. This methodology is validated via an experiment in which a photograph of a table is taken at a known position and the camera parameters are consequently solved, it is then shown that any section of the table can be found using the solved parameters. 
+This report describes a novel method for transforming a coordinate in three-dimensional space $(x,y,z)$ into pixels $ (u,v)$ in a digital image taken by a camera. Equations that express the pixels parameterised by the camera's intrinsic and extrinsic parameters are derived from first principles, from these the vanishing point special case is found. It is shown that the parameters can be solved with knowledge of 2 sets of coordinates and corresponding pixels, and the vanishing point. This methodology is validated via an experiment in which a photograph of a table is taken at a known position and the camera parameters are consequently solved, it is then shown that any section of the table can be found using the solved parameters. 
 
 \section{Method}
 \subsection{Coordinate Transformation} 
-Let us define the world as a cartesian coordinate system $(x,y,z)$ and the camera coordinate system $ (e_1,e_2,e_3)$. The camera is located at the coordinate vector  $\mtx{c} = [x_c,y_c,z_c]$ and is assumed to be known as shown in Figure \ref{fig:axis}. The coordinate vecotor $\mtx{p} = [x_p,y_p,z_p]$ is transformed into the camera coordinate system by translating such that $c$ is at the origin, and rotating through the pan $(\gamma)$, roll $(\beta)$, and tilt $(\alpha)$ angles of the camera; around the $z$,$y$ and $x$ axes respectively. The rotations are the SO(3) Rotation Group Matrices \cite{rotations}, therefore:
+Let us define the world  coordinate system $(x,y,z)$ and the camera coordinate system $ (e_1,e_2,e_3)$. The camera is located at $\textbf{c} = (x_c,y_c,z_c)$ and is assumed to be known as shown in Figure \ref{fig:axis}. The coordinate $\textbf{p} = (x_p,y_p,z_p)$ is transformed into the camera coordinate system by translating such that $\textbf{c}$ is at the origin, and rotating through the roll $(\alpha)$, tilt $(\beta)$ and pan $(\gamma)$  angles of the camera; around the $x$,$y$ and $z$ axes respectively. The rotations are the non-commutative SO(3) Rotation Group Matrices \cite{rotations}, therefore:
 
 \begin{align}
 \textbf{p}_c & = 
@@ -37,9 +39,9 @@ Let us define the world as a cartesian coordinate system $(x,y,z)$ and the camer
     0 & \cos\alpha & -\sin\alpha \\
     0 & \sin\alpha &  \cos\alpha
 \end{bmatrix}
-\textbf{p}-\textbf{c}
+(\textbf{p}-\textbf{c})
 \\ & =
-\mtx{R} \mtx{t}
+\mtx{R} (\textbf{p}-\textbf{c})
 \end{align}
 where
 \begin{equation}
@@ -48,109 +50,100 @@ where
 \cos\gamma\cos\beta & -\sin\gamma\cos\alpha + \cos\gamma\sin\beta\sin\alpha & \sin\gamma\sin\alpha + \cos\gamma\sin\beta\cos\alpha \\
 \sin\gamma\cos\beta & \cos\gamma\cos\alpha + \sin\gamma\sin\beta\sin\alpha & -\cos\gamma\sin\alpha + \sin\gamma\sin\beta\cos\alpha \\
 -\sin\beta & \cos\beta\sin\alpha & \cos\beta\cos\alpha
-\end{bmatrix}
+\end{bmatrix}.
 \end{equation}
-and
-\begin{equation}
-\mtx{t} = \textbf{p}-\textbf{c}.
-\end{equation}
-
-\begin{figure}
-\centering
-\includegraphics[width=6cm]{images/axis.png}
-\caption{World and Camera Coordinate Systems.}\label{fig:axis}
-\end{figure}
-
-In the case where $\textbf{c} = (0,0,0)$ and $\gamma = \beta = \alpha = 0$, then  $(x,y,z) = (e_1,e_2,e_3)$  and  $\textbf{p} =\textbf{p}_c$. The rest of the report considers transforming $\textbf{p}_c$ into pixels $(u,v)$ on a digital image taken by the camera.
-
-\subsection{Collapsing onto Planes}
-
- The Image taken by the Camera is orthogonal to \textbf{e\textsubscript{2}}, also known as the Optical Axis. The position of \textbf{p\textsubscript{c}} in the (\textbf{e\textsubscript{1}},\textbf{e\textsubscript{3}}) plane are the components of \textbf{p\textsubscript{c}} in the (\textbf{e\textsubscript{3}},\textbf{e\textsubscript{2}}) plane \textbf{p\textsubscript{32}}, and  in the  (\textbf{e\textsubscript{1}},\textbf{e\textsubscript{2}}) plane \textbf{p\textsubscript{12}} where,
-
-$$ \textbf{p\textsubscript{32}} =  \textbf{p\textsubscript{c}} - ( \textbf{p\textsubscript{c}}\cdot\textbf{e\textsubscript{1}})\textbf{e\textsubscript{1}} $$ 
-and
-$$ \textbf{p\textsubscript{12}} =  \textbf{p\textsubscript{c}} - ( \textbf{p\textsubscript{c}}\cdot\textbf{e\textsubscript{3}})\textbf{e\textsubscript{3}} $$
-
-\textbf{p\textsubscript{32}} and \textbf{p\textsubscript{12}} make the angles $\psi$ and $\phi$ with \textbf{e\textsubscript{2}} respectively.
 
 
 \begin{figure}[h]
-    \centering
-    \subfloat[]{{\includegraphics[width=5cm]{images/planes.png} }}%
-    \qquad
-    \subfloat[]{{\includegraphics[width=4cm]{images/image_plane.png} }}%
-    \caption{a) \textbf{p\textsubscript{c}} in the Camera coordinate system and it's components in the (\textbf{e\textsubscript{2}},\textbf{e\textsubscript{3}}) and (\textbf{e\textsubscript{2}},\textbf{e\textsubscript{1}}) planes. b) \textbf{p\textsubscript{c}} in the (\textbf{e\textsubscript{1}},\textbf{e\textsubscript{3}}) plane.} %
-    \label{fig:example}%
+\centering
+\includegraphics[width=0.7\linewidth]{images/axis.pdf}
+\caption{The world and camera coordinate systems, the camera origin $c$, and coordinate $p$.}\label{fig:axis}
+\end{figure}
+
+In the case where $c = (0,0,0)$ and $\alpha = \beta = \gamma = 0$, then  $(x,y,z) = (e_1,e_2,e_3)$  and  $\textbf{p} = \textbf{p}_c$. The rest of the report considers transforming $\textbf{p}_c$ into pixels $(u,v)$ on a digital image taken by the camera.
+
+\subsection{Collapsing onto Planes}
+
+The image taken by the camera is orthogonal to $e_1$, also known as the Optical Axis. The position of $\textbf{p}_c$ in the $(e_2,e_3)$ plane are the components of $\textbf{p}_c$ in the $(e_1,e_2)$ plane $\textbf{p}_{12}$, and in the $(e_1,e_3)$ plane $\textbf{p}_{13}$ where,
+
+$$\textbf{p}_{12} =\textbf{p}_c - (\textbf{p}_c \cdot e_3)e_3$$
+and
+$$\textbf{p}_{13} =\textbf{p}_c - (\textbf{p}_c \cdot e_2)e_2.$$
+
+
+The vectors $\textbf{p}_{13}$ and $\textbf{p}_{23}$ make the angles $\psi$ and $\phi$ with $e_1$ respectively.
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.4\linewidth]{images/planes.pdf}
+\caption{The components of $\textbf{p}_c$ in the $(e_1,e_2)$ and $(e_1,e_3)$ planes.}\label{fig:planes}
 \end{figure}
 
 \subsection{Onto the Image Plane}\label{ontotheplane}
 
-The camera is assumed to be a pinhole camera \cite{pinholeModel}, the origin of the camera coordinate system is at the lens. $\textbf{p}_c$ is projected through the lens onto the image plane inside the camera, the focal length $\lambda$ is the distance from the lens to the image plane which has size $L_1 \times L_2$. Consider the camera in the $(e_2,e_3)$ plane shown below in Figure \ref{fig:pinhole}.
+The camera is assumed to be a pinhole camera \cite{pinholeModel}, the origin of the camera coordinate system $c$ is at the lens. $\textbf{p}_c$ is projected through the lens onto the image plane inside the camera, the focal length $\lambda$ is the distance from the lens to the image plane which has size $L_1 \times L_2$. Consider the camera in the $(e_1,e_3)$ plane shown in Figure \ref{fig:pinhole}. The vector $\textbf{p}_c$ is projected to height $h$ on the image plane, via trigonometry $h = \lambda\tan\psi$. Identically, the projection of $\textbf{p}_c$ to width $w$ on the image plane in the $(e_1,e_2)$ plane is $w = \lambda\tan\phi$.
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=9.5cm]{images/pinhole.png}
-\caption{Projection of \textbf{P}\textsubscript{c} onto the Image Plane through a Pinhole Camera}\label{fig:pinhole}
+\includegraphics[width=0.58\linewidth]{images/pinhole.pdf}
+\caption{Projection of $\textbf{P}_c$ onto the image plane through a pinhole camera}\label{fig:pinhole}
 \end{figure}
 
-\textbf{p\textsubscript{c}} is projected to point h on the Image Plane, via trigonometry $h = \lambda\tan\psi$. Identically, the projection of \textbf{p\textsubscript{c}} onto the Image Plane in the (\textbf{e\textsubscript{2}},\textbf{e\textsubscript{1}}) plane is: $w = \lambda\tan\phi$.
 
 \subsection{From the Image Plane to Pixels}
 
-Assuming perfectly square identical Pixels throughout the Digital Image, we now describe the transformation from coordinate $(w,h)$ on the Image Plane to Pixel coordinate $(u,v)$ on a Digital Image of size $m\times n$ Pixels. 
-As there are $m$ Pixels equally spaced along length $L_1$ and $n$ Pixels along $L_2$ it follows that:
+Assuming perfectly square identical pixels throughout the digital image, we now describe the transformation from width and height $(w,h)$ on the image plane to pixel coordinate $(u,v)$ on an image of size $m\times n$ pixels. There are $m$ pixels equally spaced along length $L_1$ and $n$ pixels along $L_2$ therefore,
 
-\begin{equation}\label{u1}
+$$
 u = \frac{m}{L_1}w = m\frac{\lambda}{L_1}\tan\phi
  = m\frac{\lambda}{L_1} 
-\frac{\textbf{p\textsubscript{32}}\cdot\textbf{e\textsubscript{2}}}
-{\textbf{p\textsubscript{32}}\cdot\textbf{e\textsubscript{3}}}
-\end{equation}
+\bigg[ \frac{\textbf{p}_{12}\cdot e_2}{\textbf{p}_{12}\cdot e_1}\bigg]
+$$
 and
-\begin{equation}\label{u2}
+$$
 v = \frac{n}{L_2}h=n\frac{\lambda}{L_2}{\tan\psi}
  = n\frac{\lambda}{L_2}
- \frac{\textbf{p\textsubscript{12}}\cdot\textbf{e\textsubscript{2}}}
-{\textbf{p\textsubscript{12}}\cdot\textbf{e\textsubscript{1}}}
-\end{equation}
+\bigg[\frac{\textbf{p}_{13}\cdot e_3}{\textbf{p}_{13}\cdot e_1}\bigg].
+$$
 
-Expressing Equations \ref{u1} and \ref{u2} in terms of the pitch, pan and tilt angles in matrix $\mtx{R}$ yields the following:
+Expressing these in terms of the pitch, pan and tilt angles in matrix $\mtx{R}$ and world coordinates $(x,y,z)$ yields the following Equations \ref{u} and \ref{v} that describe the pixel coordinates as a function of a position in the world $(u(x,y,z),v(x,y,z))$ parameterised by the extrinsic camera parameters $\gamma, \beta$ and $\alpha$, and the intrinsic camera parameters $\frac{\lambda}{L_1}$ and $\frac{\lambda}{L_2}$.
 
 \begin{equation}\label{u}
-u = m\frac{\lambda}{L_1}
-\bigg[ \frac{\mtx{R}_{11}x+ \mtx{R}_{12}y + \mtx{R}_{13}z}
-{\mtx{R}_{21}x+ \mtx{R}_{22}y + \mtx{R}_{23}z} \bigg]
+u(x,y,z) = m\frac{\lambda}{L_1}
+\bigg[ \frac{\mtx{R}_{21}x+ \mtx{R}_{22}y + \mtx{R}_{23}z}
+{\mtx{R}_{11}x+ \mtx{R}_{12}y + \mtx{R}_{13}z} \bigg]
 \end{equation}
 
 \begin{equation}\label{v}
-v= n\frac{\lambda}{L_2}
+v(x,y,z)= n\frac{\lambda}{L_2}
 \bigg[ \frac{\mtx{R}_{31}x+ \mtx{R}_{32}y + \mtx{R}_{33}z}
-{\mtx{R}_{21}x+ \mtx{R}_{22}y + \mtx{R}_{23}z} \bigg]
+{\mtx{R}_{11}x+ \mtx{R}_{12}y + \mtx{R}_{13}z} \bigg]
 \end{equation}
 
-Equations \ref{u} and \ref{v} describe the Pixel coordinates as a function of a position in the world $(u(x,y,z),v(x,y,z))$ parameterised by the Intrinsic Camera parameters $\gamma, \beta$ and $\alpha$, and the Intrinsic Camera parameters $\frac{\lambda}{L_1}$ and $\frac{\lambda}{L_2}$.
 
 \subsubsection{Vanishing Points}
 
-The vanishing point in a Digital Image is the point at which all parallel lines orthogonal to the  $(\textbf{e\textsubscript{1}}.\textbf{e\textsubscript{3}})$ plane converge and can be found by inspection of the Digital Image. Let us denote this Pixel pair as $(u_p, v_p)$, it follows then that:
+The vanishing point in a digital image are the pixels at which all parallel lines orthogonal to the  $(e_2,e_3)$ plane converge and can be found by inspection of the image. Let us denote this pixel pair as $(u_p, v_p)$, it follows then that:
 
 \begin{equation}\label{up}
-u_p = \lim_{y\to\infty} u(x,y,z) = m\frac{\lambda}{L_1}
-\bigg[ \frac{-\sin\gamma\cos\alpha + \cos\gamma\sin\beta\sin\alpha}{\cos\beta\cos\alpha+\sin\gamma\sin\beta\sin\alpha} \bigg]
+u_p = \lim_{x\to\infty} u(x,y,z) = m\frac{\lambda}{L_1}
+\bigg[\frac{\mtx{R}_{21}}
+{\mtx{R}_{11}} \bigg]
 \end{equation}
 
 \begin{equation}\label{vp}
-v_p = \lim_{y\to\infty} v(x,y,z) = n\frac{\lambda}{L_2}
-\bigg[ \frac{\cos\beta\sin\alpha}{\cos\beta\cos\alpha+\sin\gamma\sin\beta\sin\alpha} \bigg]
+v_p = \lim_{x\to\infty} v(x,y,z) = n\frac{\lambda}{L_2}
+\bigg[\frac{\mtx{R}_{31}}
+{\mtx{R}_{11}} \bigg]
 \end{equation}
 
-Equations \ref{u},\ref{v},\ref{up} and \ref{vp} form a set of 4 Equations to be solved for 5 parameters, and therefore represent an under-determined system. Consequently 2 corresponding pairs of World and Pixel coordinates are required - forming the 5 Equations to find $\gamma$,$\beta$,$\alpha$,$\frac{\lambda}{L_1}$ and $\frac{\lambda}{L_2}$.
+Equations \ref{u},\ref{v},\ref{up} and \ref{vp} form a set of 4 equations to be solved for 5 parameters, and therefore represent an under-determined system. Consequently 2 corresponding pairs of world coordinates and pixels are required thus forming 6 equations to over-determine the system and solve for $\gamma$,$\beta$,$\alpha$,$\frac{\lambda}{L_1}$ and $\frac{\lambda}{L_2}$.
 
 \section{Experiment}
 
-An experiment was undertaken in order to ascertain the effectiveness of the methods described in this report, an iPhone 6 Camera was placed in a stand at a height of 0.205m at the end of 2 joined tables each 50cm in width and 120cm in length.\\
+An experiment was undertaken to validate the methods described in this report, an iPhone 6 camera was placed on a stand at a height of 0.205m at the end of 2 joined tables each 50cm in width and 120cm in length.\\
 
-We can use the corners where the 2 Tables meet, and the corners at the end of the second table as reliable data points. The experiment set up and 4 data points are shown in Figure \ref{fig:experiment}. Taking the end where the Camera was placed, half way across the table, and the table height as the origin of the World coordinate origin, the positions in the World $(x,y,z)$ and Pixels $(u,v)$ of the near left corner each sticky note are shown in Table \ref{table:1}. By inspection, the Vanishing Point is found to be $(1992,1267)$. 
+The corners where the 2 tables meet, and the corners at the end of the second table are reliable world coordinates. The experiment setup and 4 coordinates are shown in Figure \ref{fig:experiment}. Taking the end where the camera was placed, half way across the table, and the table height as the origin of the world coordinate origin, the corresponding coordinates and pixels of the table corners are shown in Table \ref{table:1}. By inspection, the vanishing point is found to be $(10,221)$. 
 \newline
 
 \begin{figure}[h]
@@ -172,55 +165,46 @@ Corner & $x$[m] & $y$[m] & $z$[m] &$u$ & $v$\\
 \hline
 \end{tabular}
 \end{center}
-\caption{Sticky Note coordinates in the World and Pixels in the Digital Image}
+\caption{Table corner coordinates and pixels}
 \label{table:1}
 \end{table}
 
-We now solve the 5 system parameters with 6 Equations: Equations \ref{u} and \ref{v} for the World and Pixel coordinates of the first and last corners and Equations \ref{up} and \ref{vp} for the Vanishing Point of the Digital Image. 
- The \texttt{fsolve} numerical equation solver in Maple is used to solve the 5 Extrinsic and Instrinsic Camera parameters within the upper and lower bounds shown in Table \ref{table:bounds}. The upper and lower bounds do the following:
+We now solve the 5 system parameters with 6 equations: Equations \ref{u} and \ref{v} for the world and pixel coordinates of the first and last corners and Equations \ref{up} and \ref{vp} for the vanishing point. The \texttt{fsolve()} numerical equation solver in Matlab is used to solve the parameters values shown in Table \ref{table:results}.
 
-\begin{itemize}
-
-\item  constrain the pan, roll and tilt angles between $-\pi$ and $\pi$, without this there are of course an infinite number of solutions due to the trigonemtric form of equations \ref{u}, \ref{v}, \ref{up} and \ref{vp}, 
-\item ensure  $\frac{\lambda}{L_1}$  and $\frac{\lambda}{L_2}$ are positive, since $\lambda$,$L_1$ and $L_2$ are all positive lengths.
-
-\end{itemize}
 
 \begin{table}[!htb]
 \centering
 \begin{tabular}{|c|c|c|c|c|c|}
 \hline
-Parameter & $\gamma$ & $\beta$ & $\alpha$ & $\frac{\lambda}{L_1}$ & $\frac{\lambda}{L_2}$\\
+Parameter & $\alpha$ [rads] & $\beta$ [rads] & $\gamma$ [rads] & $\frac{\lambda}{L_1}$ & $\frac{\lambda}{L_2}$\\
 \hline
-Lower Bound & $-\pi$ & $-\pi$ & $-\pi$ & 0 & 0 \\ 
-Upper Bound & $\pi$ & $\pi$ & $\pi$ & $\infty$ & $\infty$ \\
-Value & 0.007 & 0.005 & 0.071 & 0.835 & 1.146 \\
+Value & 0.071 & 0.005 & 0.007 & 0.835 & 1.146 \\
 \hline
 \end{tabular}
-\caption{Parameter value and upper and lower bounds used by the solver}
-\label{table:bounds}
+\caption{Parameter values}
+\label{table:results}
 \end{table}
 
 \subsection{Validation}
-An interesting task then is to see where the corresponding Pixels for a set points of which the World coordinates are known are found to be in the Digital Image. Consider the Table that the Camera is fixed to. The Table in the World is a set of coordinates $(x,y,z)$ where $x \in \left[ -0.25,0.25\right]$,  $y \in \left[0,2.4\right]$, and $z=-0.21$.  The corresponding set of Pixels for the Table coordinates are then found using Equations \ref{u} and \ref{v} with the parameters values in Table \ref{table:bounds}. The corresponding Pixels are shown in Figure \ref{fig:result}. Any arbitrary section of the Table can be found in the same way if the $x$,$y$ and $z$ coordinates are known, 4 sections of the Table and corresponding Pixels are shown in Figure \ref{fig:multi_table}.
+We can validate the results by finding pixels for a set of world coordinates that are known. Consider the table that the camera is fixed to, it is a continuous set of coordinates $(x,y,z)$ where $x \in \left[0,2.4\right]$,  $y \in \left[-2.5,2.5\right]$, and $z=-0.21$.  The corresponding set of pixels for the table coordinates are then found using Equations \ref{u} and \ref{v} with the parameters values in Table \ref{table:results}. The table pixels are shown in Figure \ref{fig:result}. Any arbitrary section of the table can be found in the same way if the $x$,$y$ and $z$ coordinates are known, 4 sections of the table and corresponding pixels are shown in Figure \ref{fig:multi_table}.
 \\
 \newline
 
 \begin{figure}[h]
 \centering
 \includegraphics[width=10cm]{images/found_table.png}
-\caption{A grid of Pixels corresponding to every 10cm across and down the tables}\label{fig:result}
+\caption{A grid of pixels corresponding to every 10cm across and down the tables}\label{fig:result}
 \end{figure}
 
 \begin{figure}[h]
     \centering
-    \subfloat[ $x \in {[-0.25,0.25]}$, $y \in {[1.2,2.4]}$, $z=-0.205$ ]{{\includegraphics[width=6cm]{images/table2.png}}}%
+    \subfloat[ $x \in {[1.2,2.4]}$, $y \in {[-0.25,0.25]}$, $z=-0.205$ ]{{\includegraphics[width=6cm]{images/table2.png}}}%
     \qquad
-    \subfloat[ $x \in {[-0.25,-0.05]}$, $y \in {[0,1.2]}$, $z=-0.205$ ]{{\includegraphics[width=6cm]{images/table3.png} }}%
+    \subfloat[ $y \in {[0,1.2]}$, $x \in {[-0.25,-0.05]}$, $z=-0.205$ ]{{\includegraphics[width=6cm]{images/table3.png} }}%
 	\\
-    \subfloat[ $x \in {[0,0.25]}$, $y \in {[0.6,1.2]}$, $z=-0.205$]{{\includegraphics[width=6cm]{images/table4.png} }}%
+    \subfloat[ $y \in {[0.6,1.2]}$, $x \in {[0,0.25]}$, $z=-0.205$]{{\includegraphics[width=6cm]{images/table4.png} }}%
     \qquad
-    \subfloat[ $x \in {[-0.15,0.15]}$, $y \in {[1.2,2.4]}$, $z=-0.205$]{{\includegraphics[width=6cm]{images/table5.png} }}%
+    \subfloat[ $y \in {[1.2,2.4]}$, $x \in {[-0.15,0.15]}$, $z=-0.205$]{{\includegraphics[width=6cm]{images/table5.png} }}%
     \caption{Pixels correpsonding to various sections of the Table}%
     \label{fig:multi_table}%
 \end{figure}
