--- a/Documents/camera/camera.tex
+++ b/Documents/camera/camera.tex
@@ -232,6 +232,43 @@ Any arbitrary section of the table can be found in the same way if the $x$,$y$ a
     \label{fig:multi_table}%
 \end{figure}
 
+% ------------------------------Sensitivity Analysis-------------------------------
+\section{Sensitivity Analysis}
+
+We now consider the effect on the pixels a change in each of the 5 parameters makes, this allows us to better understand how errors in the parameter calculations effect the accuracy of Equations \ref{u} and \ref{v}.
+
+\subsection{Pan Angle}
+Firstly we consider changes to the pan angle, $\gamma$. Suppose the pan angle undergoes a change $\delta\gamma$ such that $\gamma \rightarrow \gamma + \delta\gamma$. By the double angle formulas, $\sin\gamma\rightarrow\sin\gamma\cos\delta\gamma + \cos\gamma\sin\delta\gamma$ and $\cos\gamma\rightarrow\cos\gamma\cos\delta\gamma - \sin\gamma\sin\delta\gamma$. We can then find the change the full rotation matrix.
+
+\begin{equation}
+ \mtx{R} + \delta\mtx{R} =
+  \begin{bmatrix}
+    \mtx{R}_{11}\cos\delta\gamma - \mtx{R}_{21}\sin\delta\gamma & \mtx{R}_{12}\cos\delta\gamma - \mtx{R}_{22}\sin\delta\gamma & \mtx{R}_{13}\cos\delta\gamma - \mtx{R}_{23}\sin\delta\gamma \\
+
+    \mtx{R}_{21}\cos\delta\gamma + \mtx{R}_{11}\sin\delta\gamma & \mtx{R}_{22}\cos\delta\gamma + \mtx{R}_{12}\sin\delta\gamma & \mtx{R}_{23}\cos\delta\gamma + \mtx{R}_{13}\sin\delta\gamma \\
+
+    \mtx{R}_{31} & \mtx{R}_{32} & \mtx{R}_{33}
+ \end{bmatrix}
+\end{equation}
+
+Recall Equation \ref{u} that describes the pixel $u$ as a function of $(x,y,z)$ parameterised by $\alpha$, $\beta$, $\gamma$, $\frac{\lambda}{L_1}$ and $\frac{\lambda}{L_2}$, we can find the change $u + \delta u$ by substituting $\mtx{R} + \delta\mtx{R}$ for $\mtx{R}$ in to the equation as shown in Equation \ref{du} below.
+
+\begin{equation}\label{du}
+    u + \delta u = m\frac{\lambda}{L_1}
+        \bigg[\frac{(\mtx{R}_{21}x + \mtx{R}_{22}y + \mtx{R}_{23}y)\cos\delta\gamma 
+                  + (\mtx{R}_{11}x + \mtx{R}_{12}y + \mtx{R}_{13}y)\sin\delta\gamma}
+                   {(\mtx{R}_{11}x + \mtx{R}_{12}y + \mtx{R}_{13}y)\cos\delta\gamma -(\mtx{R}_{21}x + \mtx{R}_{22}y + \mtx{R}_{23}y)\sin\delta\gamma}                  
+        \bigg]
+\end{equation}
+
+We can see that as the angle change tends to zero, then Equation \ref{du} tends to the original pixel equation. Therefore: $\lim_{\delta\gamma \to 0} u + \delta u = u$. Identically for pixel $v$:
+
+\begin{equation}\label{dv}
+    v + \delta v = n\frac{\lambda}{L_2}
+        \bigg[\frac{\mtx{R}_{31}x + \mtx{R}_{22}y + \mtx{R}_{23}y}
+                   {(\mtx{R}_{11}x + \mtx{R}_{12}y + \mtx{R}_{13}y)\cos\delta\gamma -(\mtx{R}_{21}x + \mtx{R}_{22}y + \mtx{R}_{23}y)\sin\delta\gamma}                  
+        \bigg]
+\end{equation}
 
 \begin{thebibliography}{9}
 \bibitem{rotations}
